--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{% trans %}register{% endtrans %}{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>{% trans %}register{% endtrans %}</h1>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button class="btn">Register</button>
+        <button class="btn">{% trans %}register{% endtrans %}</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
