--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('{% trans %}delete_item{% endtrans %}');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">{% trans %}Delete{% endtrans %}</button>
+    <button class="btn">{% trans %}delete{% endtrans %}</button>
 </form>
