--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,12 @@
 {{ form_start(form) }}
+    <ul>
+        {% for photo in user.photos %}
+            <li><img src="/photos/userId-{{ user.id }}/{{ photo }}" alt="" width="200"></li>
+        {% endfor %}
+
+    </ul>
+
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('{% trans %}Save{% endtrans %}') }}</button>
+
+<button class="btn">{{ button_label|default('{% trans %}Save{% endtrans %}') }}</button>
 {{ form_end(form) }}
