--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -13,6 +13,7 @@
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
+    <a href="{{ path('photo_new') }}">add new photo</a>
     <a href="{{ path('user_index') }}">back to list</a>
 
     {{ include('user/_delete_form.html.twig') }}
