--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -36,7 +36,9 @@
                 <td>{{ user.lastLogin|date('Y-m-d H:i:s') }}</td>
                 <td>
                     <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+                    {% if app.user and user.id == app.user.id %}
+                        <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
